--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@ public/demos
 # -------------------------------------------------
 cypress/integration/examples
 cypress/integration/grading
-cypress/fixtures/
+cypress/fixtures/link_array.json
+cypress/fixtures/test_values.json
 
 # -------------------------------------------------
 # Misc CSS Caching
@@ -44,3 +45,4 @@ npm-debug.log
 bower_components
 node_modules
 **/*/node_modules
+node_modules
